flex/flex-tests/testData/js2_highlighting/IncompatibleOverrideFix4.js2
package {
class <error>FooBase</error> {
    function foo() {}
}
}

package {
class Foo extends FooBase {
    override function foo():<error descr="Incompatible override, should have return type ''">int</error> {
    }
}
}